--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -39,7 +39,8 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
-    "vite": "^6.3.5",
-    "vitest": "^3.2.3"
+    "vite": "6.3.5",
+    "vitest": "^3.2.3",
+    "rollup": "3.29.4"
   }
 }
